Corrected issues with scrollbar and file paths

--- a/musicApp/music-app-style.css
+++ b/musicApp/music-app-style.css
@@ -15,7 +15,6 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-  overflow: hidden;
 }
 
 .nav-bar{
